animation overlap and use life popup issues fixed, changed game time counter

--- a/src/app/main/game/game.component.css
+++ b/src/app/main/game/game.component.css
@@ -464,3 +464,13 @@
     margin-top: 10px; */
     /* float: right; */
 }
+
+.followObj{
+    width: 28px;
+    height: 28px;
+    background-color: red;
+    border-radius: 50%;
+    /* left: 90%;
+    top: 90%; */
+    position: absolute;
+}
